// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`return no expression 1`] = `
Program {
  "children": Array [
    Return {
      "expr": null,
      "kind": "return",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`return simple 1`] = `
Program {
  "children": Array [
    Return {
      "expr": String {
        "isDoubleQuote": true,
        "kind": "string",
        "raw": "\\"string\\"",
        "unicode": false,
        "value": "string",
      },
      "kind": "return",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;
